--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,26 @@
+# 服务器配置
+NODE_ENV=development
+PORT=3001
+HOST=0.0.0.0
+
 # 数据库配置
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/multi_agent_platform
+
+# Redis配置
 REDIS_URL=redis://localhost:6379
 
 # JWT配置
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=7d
+
+# CORS配置
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# 日志配置
+LOG_LEVEL=info
 
 # Web3配置
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/your-infura-project-id
-
-# 前端配置
-NEXT_PUBLIC_API_URL=http://localhost:3001
-NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=your-wallet-connect-project-id
 
 # LLM服务配置
 OPENAI_API_KEY=your-openai-api-key
@@ -22,11 +32,30 @@ TWITTER_API_SECRET=your-twitter-api-secret
 TWITTER_BEARER_TOKEN=your-twitter-bearer-token
 
 # 对象存储配置
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_S3_BUCKET=your-s3-bucket-name
 AWS_REGION=us-east-1
 
-# 开发环境配置
-NODE_ENV=development
-LOG_LEVEL=debug
+# Agent配置
+AGENT_EXECUTION_TIMEOUT=300000
+MAX_CONCURRENT_AGENTS=10
+
+# 工作流配置
+WORKFLOW_EXECUTION_TIMEOUT=1800000
+MAX_CONCURRENT_WORKFLOWS=5
+
+# 文件上传配置
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,video/mp4
+
+# 速率限制配置
+RATE_LIMIT_MAX=100
+RATE_LIMIT_WINDOW=900000
+
+# 缓存配置
+CACHE_TTL=3600
+
+# 监控配置
+METRICS_ENABLED=true
+METRICS_PORT=9090
