🚀 Implement Web3 Wallet Authentication System
✅ **Core Features Implemented:**
- Web3 wallet detection and connection (MetaMask, WalletConnect, Coinbase)
- Ethereum signature-based authentication flow
- JWT token management with auto-refresh
- React hooks for wallet and auth state management
- Responsive UI components with error handling
- Chrome extension integration preparation

🔧 **Technical Implementation:**
- **Frontend**: Next.js + React + TypeScript + ethers.js
- **Wallet Detection**: @metamask/detect-provider + custom detection
- **State Management**: Custom React hooks with context
- **Authentication**: Nonce-based signature verification
- **Error Handling**: Comprehensive error types and user-friendly messages
- **Security**: Token encryption, secure storage, auto-logout

📦 **New Components:**
- WalletConnectButton: Main wallet connection interface
- WalletProvider: Global state management context
- useWalletConnect: Wallet connection and management hook
- useAuth: Authentication state and operations hook
- AuthGuard: Protected route component
- NetworkSwitcher: Network switching interface

🧪 **Testing:**
- Added comprehensive test page (/test-wallet)
- Real-time wallet and auth state monitoring
- Interactive testing for all core functions
- Detailed operation logging

✨ **User Experience:**
- One-click wallet connection
- Automatic network detection and switching
- Real-time connection status indicators
- Graceful error handling with retry options
- Mobile-responsive design

This completes the Web3 wallet authentication system implementation,
providing a solid foundation for the multi-agent automation platform.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+*.cookie
 # Production builds
 dist/
 build/
@@ -109,3 +109,4 @@ packages/chrome-extension/dist/
 
 # Docker
 .dockerignore
+.turbo/cookies/18.cookie
