--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,26 +12,29 @@
     "clean": "rm -rf .next dist"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
+    "@tanstack/react-query": "^5.90.2",
+    "ethers": "^6.15.0",
+    "lucide-react": "^0.290.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ethers": "^6.8.0",
-    "@tanstack/react-query": "^5.0.0",
-    "zustand": "^4.4.0",
     "tailwindcss": "^3.3.0",
-    "lucide-react": "^0.290.0"
+    "viem": "^2.37.12",
+    "wagmi": "^2.17.5",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "^20.19.19",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.0"
+    "postcss": "^8.4.0",
+    "typescript": "^5.0.0"
   }
 }
