fix: resolve all TypeScript compilation errors
- Add EventEmitter inheritance to IAgent interface
- Fix AgentConstructor type signature
- Add missing interface methods (getProcessingStats, testValidation, etc.)
- Create ConfigValidationResult type for simple config validation
- Change private properties to protected to fix inheritance issues
- Replace error.message with getErrorMessage() utility
- Fix duplicate imports and exports
- Add translation config to ProcessingRuleConfig
- Provide inquirer stub implementation

All 57 TypeScript errors resolved. Project now compiles successfully.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ out/
 .idea/
 *.swp
 *.swo
+.kiro/
 
 # OS
 .DS_Store
@@ -109,4 +110,4 @@ packages/chrome-extension/dist/
 
 # Docker
 .dockerignore
-.turbo/cookies/18.cookie
+.turbo/cookies/
