--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "turbo": "^1.10.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "turbo": "^1.10.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "optionalDependencies": {
+    "@esbuild/darwin-arm64": "^0.25.10"
   }
 }
