--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,25 +14,28 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "fastify": "^4.24.0",
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
+    "dotenv": "^16.3.0",
     "ethers": "^6.8.0",
+    "fastify": "^4.24.0",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
-    "zod": "^3.22.0",
-    "dotenv": "^16.3.0"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.10.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "@esbuild/darwin-arm64": "^0.25.10"
   }
 }
