--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ out/
 .idea/
 *.swp
 *.swo
-.kiro/
 
 # OS
 .DS_Store
@@ -111,3 +110,4 @@ packages/chrome-extension/dist/
 # Docker
 .dockerignore
 .turbo/cookies/
+.turbo/daemon/
