--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,22 +11,27 @@
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "db:migrate": "tsx src/database/migrate.ts",
+    "db:seed": "tsx src/database/seed.ts"
   },
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
+    "@fastify/websocket": "^11.2.0",
     "dotenv": "^16.3.0",
     "ethers": "^6.8.0",
     "fastify": "^4.24.0",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
+    "ws": "^8.17.1",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.10.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
