--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,13 +12,14 @@
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist",
+    "db:init": "tsx src/database/init-db.ts",
     "db:migrate": "tsx src/database/migrate.ts",
     "db:seed": "tsx src/database/seed.ts"
   },
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
-    "@fastify/websocket": "^11.2.0",
+    "@fastify/websocket": "^10.0.1",
     "dotenv": "^16.3.0",
     "ethers": "^6.8.0",
     "fastify": "^4.24.0",
