--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
     "@fastify/websocket": "^10.0.1",
+    "axios": "^1.12.2",
     "dotenv": "^16.3.0",
     "ethers": "^6.8.0",
     "fastify": "^4.24.0",
