--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.3.0",
     "tailwindcss": "^3.3.0",
     "viem": "^2.37.12",
     "wagmi": "^2.17.5",
