--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,12 +20,14 @@
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
     "@fastify/websocket": "^10.0.1",
+    "@types/unzipper": "^0.10.11",
     "axios": "^1.12.2",
     "dotenv": "^16.3.0",
     "ethers": "^6.8.0",
     "fastify": "^4.24.0",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
+    "unzipper": "^0.12.3",
     "ws": "^8.17.1",
     "zod": "^3.22.0"
   },
